--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
+    "react-speech-recognition": "^4.0.0",
     "react-swipeable": "^7.0.1",
     "recharts": "^2.12.2",
     "viem": "^2.27.2",
@@ -28,6 +29,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
